src/test/resources/annotator/UnresolvedTypeReference_Field.proto
syntax = "proto3";

package annotator;

message TestMessage {
    <error descr="Unresolved reference">unresolved</error> field = 1;
}